# AI-Dashboard

./: .env.example  .gitignore  Procfile  README.md  cred.txt  deploy-debug.sh  deploy.sh  environment.yml  requirements.txt
agent/: README.md  environment.yml  install.sh  run-agent.sh
agent/debian/: ai-dashboard-agent.service  postinst  rules
agent/src/ai_dashboard_agent/: cli.py  client.py  collector.py
agent_service/: README.md  build-deb.sh  environment.yml  install.sh  pyproject.toml
agent_service/debian/: agent.conf  ai-dashboard-agent.install  changelog  control
agent_service/src/ai_dashboard_agent/: cli.py  client.py  collector.py
backend/: deploy-debug.sh  deploy.sh  environment.yml  nginx.conf.example
backend/config/: settings.py  urls.py
backend/monitoring/: admin.py  auth.py  urls.py
config/: settings.py  urls.py
docs/: AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  OPERATIONS.md  README.md  WEBAPP_SETUP.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  version.ts
globals/: README.md  app_text.yml
ios_app/: Package.swift  README.md
ios_app/AIDashboardApp.xcodeproj/: project.pbxproj
macos_app/: Package.swift  README.md
monitoring/: admin.py  auth.py  models.py  urls.py  version.py  views.py
monitoring/migrations/: 0001_initial.py  0005_notification.py  0007_monitoredserver_agent_user.py
monitoring/services/: __init__.py  collector.py
templates/account/: login.html
vision-ui-dashboard-react/: package.json
vision-ui-dashboard-react/src/: App.js  routes.js
(+87 files in other folders)
