[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dashboard-agent"
version = "0.1.0"
description = "System metrics agent for the AI workload dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psutil>=7.2",
  "requests>=2.31",
  "nvidia-ml-py>=12.0",
]

[project.scripts]
ai-dashboard-agent = "ai_dashboard_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

